# silver_bullets

./: .gitignore  CMakeLists.txt
cmake/: FindSb_os.cmake
examples/: CMakeLists.txt
examples/iterate_struct/: main.cpp
examples/templatize/: CMakeLists.txt  main.cpp
examples/use_enum_names/: CMakeLists.txt  main.cpp
examples/use_factory/: CMakeLists.txt  main.cpp
examples/use_fs_ns_workaround/: CMakeLists.txt  main.cpp
examples/use_func/: CMakeLists.txt  main.cpp
examples/use_iterate_struct/: CMakeLists.txt  config_example.json  main.cpp  use_iterate_struct.cpp  use_iterate_struct.hpp  use_json_config.cpp  use_json_config.hpp
examples/use_parallel/: main.cpp
examples/use_sb_os/: CMakeLists.txt  main.cpp
examples/use_system/: CMakeLists.txt  main.cpp
examples/use_task_engine/: CMakeLists.txt  main.cpp
examples/use_task_engine_remote/: CMakeLists.txt  README  run.sh  run.task_engine_remote
examples/use_task_engine_remote/use_remote_task_engine_main/: CMakeLists.txt  main.cpp
examples/use_task_engine_remote/use_remote_task_engine_worker/: main.cpp
examples/use_templatize/: main.cpp
examples/use_trie/: CMakeLists.txt  main.cpp
include/enum_names/: enum_names.h  enum_names.hpp
include/fs_ns_workaround/: fs_ns_workaround.hpp
include/func/: func_arg_convert.hpp  indexed_tuple.hpp
include/iterate_struct/: ConfigLoader.hpp  collect_paths_json_doc.h  collect_paths_json_doc.hpp  collect_paths_struct.h  collect_paths_struct.hpp  iterate_struct.hpp  json_doc_converter.h  json_doc_converter.hpp  json_doc_io.h  json_doc_io.hpp  ptree_converter.h  ptree_converter.hpp  reportParameterOrigin.h  value_printer.h  value_printer.hpp
include/parallel/: task_engine.hpp  task_engine_func.hpp
include/sb_os/: defs.h  get_program_dir.hpp
include/silver_bullets/: enum_names.hpp  factory.hpp  fs_ns_workaround.hpp  import_export.hpp  lib_warmup.hpp  task_engine.hpp  trie.hpp
include/silver_bullets/factory/: Factory.hpp  PerTypeStorage.hpp  defs.h
include/silver_bullets/func/: func_arg_convert.hpp  function_traits.hpp  indexed_tuple.hpp
include/silver_bullets/iterate_struct/: CompositeValidator.hpp  ConfigLoader.hpp  EmptyValidator.hpp  JsonValue.hpp  JsonValue_fwd.hpp  PlainRepresentation.hpp  StructDataValidator.hpp  StructFieldsMismatchValidator.hpp  ValidatorState.hpp  collect_paths_json_doc.hpp  collect_paths_struct.hpp  iterate_struct.hpp  json_doc_converter.hpp  json_doc_io.hpp  ptree_converter.hpp  reportParameterOrigin.h  struct_fields_mismatch_validator.hpp  tree_path_tracker.hpp  validators.hpp  value_printer.hpp
include/silver_bullets/sync/: CancelController.hpp  SyncAccessor.hpp  ThreadNotifier.hpp
include/silver_bullets/system/: defs.h  get_program_dir.hpp
include/silver_bullets/task_engine/: OutputEndPoint.hpp  ParallelTaskScheduler.hpp  SimpleTaskFunc.hpp  StatefulCancellableTaskFunc.hpp  StatefulTaskFunc.hpp  StatefulTaskFuncTraits.hpp  TaskExecutor.hpp  TaskExecutorCancelParam.hpp  TaskFuncRegistry.hpp  TaskGraph.hpp  TaskGraphBuilder.hpp  TaskGraphExecutor.hpp  TaskQueueExecutor.hpp  ThreadedTaskExecutor.hpp  task_engine.hpp  types.hpp
include/silver_bullets/templatize/: resolve_template_args.hpp  tuple_util.hpp
include/silver_bullets/trie/: Trie.hpp
include/sync/: CancelController.hpp  SyncAccessor.hpp  ThreadNotifier.hpp
include/task_engine/: Connection.hpp  InputEndPoint.hpp  SimpleTaskFunc.hpp  StatefulCancellableTaskFunc.hpp  StatefulTaskFunc.hpp  StatefulTaskFuncTraits.hpp  Task.hpp  TaskExecutor.hpp  TaskExecutorCancelParam.hpp  TaskGraphExecutor.hpp  TaskQueueExecutor.hpp  ThreadedTaskExecutor.hpp  task_engine.hpp  types.hpp
include/templatize/: resolve_template_args.hpp
include/trie/: Trie.hpp
src/: CMakeLists.txt
src/enum_names/: CMakeLists.txt
src/factory/: CMakeLists.txt  FindSilverBulletsFactory.cmake  PerTypeStorage.cpp
src/func/: CMakeLists.txt
src/iterate_struct/: CMakeLists.txt
src/sb_os/: CMakeLists.txt  get_program_dir.cpp
src/system/: CMakeLists.txt  FindSilverBulletsSystem.cmake  get_program_dir.cpp
src/task_engine/: CMakeLists.txt  RemoteExecutorService.hpp  RemoteTaskExecutor.hpp
src/task_engine/protoapi/: proto.cmake  task.proto
